--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Openu-book-template</h1>
-        <p>Lyx template for writing books at the Open University</p>
+        <p>Lyx template for writing Books (מדריך למידה) at the Open University</p>
 
         <p class="view"><a href="https://github.com/OpenUniversity/openu-book-template">View the Project on GitHub <small>OpenUniversity/openu-book-template</small></a></p>
 
