--- a/index.html
+++ b/index.html
@@ -1,34 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Openu-book-template by OpenUniversity</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Openu-book-template : LyX template for writing textbooks (מדריך למידה) at the Open University" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Openu-book-template</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Openu-book-template</h1>
-        <p>Lyx template for writing Books (מדריך למידה) at the Open University</p>
 
-        <p class="view"><a href="https://github.com/OpenUniversity/openu-book-template">View the Project on GitHub <small>OpenUniversity/openu-book-template</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/OpenUniversity/openu-book-template">View on GitHub</a>
 
+          <h1 id="project_title">Openu-book-template</h1>
+          <h2 id="project_tagline">LyX template for writing textbooks (מדריך למידה) at the Open University</h2>
 
-        <ul>
-          <li><a href="https://github.com/OpenUniversity/openu-book-template/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/OpenUniversity/openu-book-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/OpenUniversity/openu-book-template">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/OpenUniversity/openu-book-template/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/OpenUniversity/openu-book-template/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
+<a name="welcome-to-lyx" class="anchor" href="#welcome-to-lyx"><span class="octicon octicon-link"></span></a>Welcome to LyX.</h3>
+
+<p>העורך LyX  הוא עורך ויזואלי (editor) לעריכת קובץ, שממנו אפשר לחולל מסמך ב LaTeX או PDF.</p>
+
+<p>מה זה אומר?</p>
+
+<ol>
+<li><pre><code>  אפשר לערוך מסמך ב LyX בלי לדעת LaTeX.
+</code></pre></li>
+<li><pre><code>  יש תמיכה נהדרת בכתיבת תוכן מתמטי כמו שמתבקש בתארי מדעים מדוייקים / הנדסה.
+</code></pre></li>
+<li><pre><code>  אפשר לחולל מסמך PDF שנראה טוב עם מעט מאוד מאמץ.
+</code></pre></li>
+</ol><p>לגבי סעיף (1), עריכת תיקונים קלים של עריכה לשונית במסמך LyX דומה מאד לעריכת תיקונים במסמך Word.  את זה אפשר להטמיע בקלות יחסית כי אין צורך בהכשרה מסובכת.</p>
+
+<p>לגבי סעיף (2), אם הדבר מסייע, אני יכול לבצע בעצמי את התיקונים בנוסחאות.</p>
+
+<p>לגבי סעיף (3), לאחר ביצוע התיקונים על-ידכם, אני יכול להפיק את קובץ ה PDF.  כך שהדבר לא יגרור שינויים מהותיים בצורת העבודה בהוצ"ל.</p>
+
+<h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
@@ -60,12 +83,17 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/OpenUniversity">OpenUniversity</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Openu-book-template maintained by <a href="https://github.com/OpenUniversity">OpenUniversity</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
