--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="he-il" dir="rtl">
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -28,7 +28,9 @@
         </ul>
       </header>
       <section>
-        <h3>
+        <p></p>
+
+<h3>
 <a name="welcome-to-lyx" class="anchor" href="#welcome-to-lyx"><span class="octicon octicon-link"></span></a>Welcome to LyX.</h3>
 
 <p>העורך LyX  הוא עורך ויזואלי (editor) לעריכת קובץ, שממנו אפשר לחולל מסמך ב LaTeX או PDF.</p>
