--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="he-il">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body dir="rtl">
     <div class="wrapper">
       <header>
         <h1>Openu-book-template</h1>
@@ -32,6 +32,8 @@
 
 <h3>
 <a name="welcome-to-lyx" class="anchor" href="#welcome-to-lyx"><span class="octicon octicon-link"></span></a>Welcome to LyX.</h3>
+
+
 
 <p>העורך LyX  הוא עורך ויזואלי (editor) לעריכת קובץ, שממנו אפשר לחולל מסמך ב LaTeX או PDF.</p>
 
