--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body dir="rtl">
+  <body>
     <div class="wrapper">
       <header>
         <h1>Openu-book-template</h1>
