--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section>
         <p></p>
 
+<div dir="rtl">
 <h3>
 <a name="welcome-to-lyx" class="anchor" href="#welcome-to-lyx"><span class="octicon octicon-link"></span></a>Welcome to LyX.</h3>
 
@@ -52,6 +53,7 @@
 
 <p>לגבי סעיף (3), לאחר ביצוע התיקונים על-ידכם, אני יכול להפיק את קובץ ה PDF.  כך שהדבר לא יגרור שינויים מהותיים בצורת העבודה בהוצ"ל.</p>
 
+</div>
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
