--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <ol>
 <li><pre><code>  אפשר לערוך מסמך ב LyX בלי לדעת LaTeX.
 </code></pre></li>
-<li><pre><code>  יש תמיכה נהדרת בכתיבת תוכן מתמטי כמו שמתבקש בתארי מדעים מדוייקים / הנדסה.
+<li><pre><code>  יש תמיכה נהדרת בכתיבת תוכן מתמטי כמו שמתבקש בתארי מדעים מדם / הנדסה.
 </code></pre></li>
 <li><pre><code>  אפשר לחולל מסמך PDF שנראה טוב עם מעט מאוד מאמץ.
 </code></pre></li>
