--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section>
         <p></p>
 
+<dev dir="rtl">
 <h3>
 <a name="why-lyx" class="anchor" href="#why-lyx"><span class="octicon octicon-link"></span></a>Why LyX.</h3>
 
@@ -42,6 +43,7 @@
 <li>יש תמיכה מקצועית בכתיבת תוכן מתמטי כפי שמתבקש בתארי מדעים / הנדסה.</li>
 <li>אפשר לחולל מסמך PDF באיכות של הוצ"ל עם מעט מאוד מאמץ.</li>
 </ul><p></p>
+</dev>
 
 <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
