--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <section>
         <p></p>
 
+<dev lang="he-il" dir="rtl">
 <h3>
 <a name="why-lyx" class="anchor" href="#why-lyx"><span class="octicon octicon-link"></span></a>Why LyX.</h3>
 
@@ -42,6 +43,7 @@
 <li>יש תמיכה מקצועית בכתיבת תוכן מתמטי כפי שמתבקש בתארי מדעים / הנדסה.</li>
 <li>אפשר לחולל מסמך PDF באיכות של הוצ"ל עם מעט מאוד מאמץ.</li>
 </ul><p></p>
+</dev>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/OpenUniversity">OpenUniversity</a></p>
